--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -113,63 +113,67 @@
         <div class="container">
           <h3 class="text-center mb-3">Latest Listings</h3>
           <div class="row">
+            {% if listings %}
+            {% for listing in listings %}
             <!-- Listing 1 -->
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="card listing-preview">
                 <img
                 {% comment %} dynamic data {% endcomment %}
                   class="card-img-top"
-                  src="assets/img/homes/home-1.jpg"
-                  alt=""
+                  src={{ listing.photo_main.url }} alt=""
                 />
                 <div class="card-img-overlay">
                   <h2>
                     <span class="badge badge-secondary text-white"
-                      >$4,900,000</span
+                      >{{ listng.price }}</span
                     >
                   </h2>
                 </div>
                 <div class="card-body">
                   <div class="listing-heading text-center">
-                    <h4 class="text-primary">45 Prince Street</h4>
+                    <h4 class="text-primary">{{ listing.district }}</h4>
                     <p>
-                      <i class="fas fa-map-marker text-secondary"></i> Yau Tsim
-                      Mong
+                      <i class="fas fa-map-marker text-secondary"></i> {{ listing.title }}
                     </p>
                   </div>
                   <hr />
                   <div class="row py-2 text-secondary">
                     <div class="col-6">
-                      <i class="fas fa-th-large"></i> Sqft: 2500
+                      <i class="fas fa-th-large"></i> {{ listing.sqft }}
                     </div>
                     <div class="col-6">
-                      <i class="fas fa-dumbbell"></i> ClubHouse: 2
+                      <i class="fas fa-dumbbell"></i> {{ listing.district }}
                     </div>
                   </div>
                   <div class="row py-2 text-secondary">
                     <div class="col-6">
-                      <i class="fas fa-bed"></i> Bedrooms: 3
+                      <i class="fas fa-bed"></i> {{ listing.bedrooms }}
                     </div>
                     <div class="col-6">
-                      <i class="fas fa-bath"></i> Bathrooms: 2
+                      <i class="fas fa-bath"></i> {{ listing.bathrooms }}
                     </div>
                   </div>
                   <hr />
                   <div class="row py-2 text-secondary">
-                    <div class="col-6"><i class="fas fa-user"></i> Kyle Chan</div>
+                    <div class="col-6"><i class="fas fa-user"></i> {{ listing.realtor }}</div>
                   </div>
                   <div class="row text-secondary pb-2">
                     <div class="col-6">
-                      <i class="fas fa-clock"></i> 5 days ago
+                      <i class="fas fa-clock"></i> {{ listing.listed_date }}
                     </div>
                   </div>
                   <hr />
-                  <a href="listing.html" class="btn btn-primary btn-block"
+                  <a href={% url "listing" listing.id %} class="btn btn-primary btn-block"
                     >More Info</a
                   >
                 </div>
               </div>
             </div>
+            {% endfor %} {% else %}
+            <div class="col-md-12">
+              <p> No Listing Available <p>
+            {% endif %}
   
             <!-- Listing 2 -->
             <div class="col-md-6 col-lg-4 mb-4">
